endrer på navn og legger permissions under jobs

--- a/.github/workflows/dependency-submission.yml
+++ b/.github/workflows/dependency-submission.yml
@@ -3,12 +3,13 @@ name: Avhengighetsgraf
 on:
   workflow_call:
 
-permissions:
-  contents: write
-
 jobs:
   dependency-submission:
+    name: Avhengighetsgraf
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Sjekk ut koden
         uses: actions/checkout@v4
