endrer navn på workflow

--- a/.github/workflows/dependency-submission.yaml
+++ b/.github/workflows/dependency-submission.yaml
@@ -1,11 +1,11 @@
-name: Avhengighetsgraf
+name: Lag avhengighetsgraf
 
 on:
   workflow_call:
 
 jobs:
   dependency-submission:
-    name: Avhengighetsgraf
+    name: Lag avhengighetsgraf
     runs-on: ubuntu-latest
     permissions:
       contents: write
