legger ved var for commit
lager kun release i main

--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -46,6 +46,7 @@ jobs:
         env:
           CLUSTER: prod-gcp
           RESOURCE: ${{ inputs.nais-resource }}
+          VAR: commit=${{ github.sha }}
           VARS: ${{ inputs.nais-vars }}
 
       - name: Etter deploy
