--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -56,7 +56,7 @@ jobs:
         env:
           CLUSTER: dev-gcp
           RESOURCE: ${{ inputs.nais-resource }}
-          VAR: image=${{ steps.docker-build-push.outputs.image }}
+          VAR: image=${{ steps.docker-build-push.outputs.image }},commit=${{ github.sha }}
           VARS: ${{ inputs.nais-vars }}
 
       - name: Etter deploy
@@ -66,6 +66,7 @@ jobs:
 
       - name: Lag release
         uses: actions/create-release@v1
+        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
