--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -3,11 +3,11 @@ name: Bygg, deploy til dev-gcp og lag release
 on:
   workflow_call:
     inputs:
-      nais-resource:
+      manifest:
         required: true
         type: string
         default: .nais/nais-dev.yaml
-      nais-vars:
+      vars:
         required: false
         type: string
 
@@ -55,9 +55,9 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          RESOURCE: ${{ inputs.nais-resource }}
+          RESOURCE: ${{ inputs.manifest }}
           VAR: image=${{ steps.docker-build-push.outputs.image }},commit=${{ github.sha }}
-          VARS: ${{ inputs.nais-vars }}
+          VARS: ${{ inputs.vars }}
 
       - name: Etter deploy
         uses: navikt/digihot-deploy/actions/post-deploy@v3
