--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -3,11 +3,11 @@ name: Deploy til prod-gcp
 on:
   workflow_call:
     inputs:
-      nais-resource:
+      manifest:
         required: true
         type: string
         default: .nais/nais-prod.yaml
-      nais-vars:
+      vars:
         required: false
         type: string
 
@@ -45,9 +45,9 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: prod-gcp
-          RESOURCE: ${{ inputs.nais-resource }}
+          RESOURCE: ${{ inputs.manifest }}
           VAR: commit=${{ github.sha }}
-          VARS: ${{ inputs.nais-vars }}
+          VARS: ${{ inputs.vars }}
 
       - name: Etter deploy
         uses: navikt/digihot-deploy/actions/post-production@v2
