Laster opp testrapport hvis Gradle build feiler

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -36,6 +36,15 @@ jobs:
       - name: Bygg applikasjon
         run: ./gradlew build --no-daemon
 
+      - name: Last opp testrapport
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: testrapport
+          path: |
+            **/build/reports/
+            **/build/test-results/
+
       - name: Før deploy
         uses: navikt/digihot-deploy/actions/pre-deploy@v3
         env:
