--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -1,4 +1,4 @@
-name: Bygg, deploy til dev-gcp og lag release
+name: Bygg, deploy til dev og lag release
 
 on:
   workflow_call:
@@ -7,13 +7,17 @@ on:
         required: true
         type: string
         default: .nais/nais-dev.yaml
+      cluster:
+        required: true
+        type: string
+        default: dev-gcp
       vars:
         required: false
         type: string
 
 jobs:
   build:
-    name: Bygg, deploy til dev-gcp og lag release
+    name: Bygg, deploy til ${{ inputs.cluster }} og lag release
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -23,6 +27,9 @@ jobs:
     steps:
       - name: Sjekk ut koden
         uses: actions/checkout@v4
+
+      - name: Valider Gradle wrapper
+        uses: gradle/actions/wrapper-validation@v3
 
       - name: Sett opp Java
         uses: actions/setup-java@v4
@@ -60,10 +67,10 @@ jobs:
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           salsa: true
 
-      - name: Deploy til dev-gcp
+      - name: Deploy til ${{ inputs.cluster }}
         uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: dev-gcp
+          CLUSTER: ${{ inputs.cluster }}
           RESOURCE: ${{ inputs.manifest }}
           VAR: image=${{ steps.docker-build-push.outputs.image }},commit=${{ github.sha }}
           VARS: ${{ inputs.vars }}
