--- a/.github/workflows/kodekvalitet.yaml
+++ b/.github/workflows/kodekvalitet.yaml
@@ -11,6 +11,13 @@ jobs:
       security-events: write
     uses: ./.github/workflows/codeql.yaml
 
+  detekt-scan:
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    uses: ./.github/workflows/detekt.yaml
+
   dependency-submission:
     permissions:
       contents: write
