--- a/.github/workflows/detekt.yaml
+++ b/.github/workflows/detekt.yaml
@@ -41,6 +41,7 @@ jobs:
           ' 1> gh_response.json
           
           DETEKT_RELEASE_SHA=$(jq --raw-output '.data.repository.release.releaseAssets.tagCommit.oid' gh_response.json)
+          echo $DETEKT_RELEASE_SHA
           if [ $DETEKT_RELEASE_SHA != "418f78be677c58dbc84ee5d7118e13587d7ebbee" ]; then
             echo "Release tag doesn't match expected commit SHA"
             exit 1
