--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -92,3 +92,7 @@ jobs:
           body: ${{ env.CHANGE_LOG }}
           draft: true
           prerelease: false
+
+      - name: Definer output
+        if: github.ref == 'refs/heads/main'
+        run: echo "VERSION_TAG=${VERSION_TAG}" >> $GITHUB_OUTPUT
