--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -14,6 +14,8 @@ on:
       vars:
         required: false
         type: string
+    outputs:
+      version-tag: ${{ jobs.build.outputs.version-tag }}
 
 jobs:
   build:
