definer VERSION_TAG i publish-jar.yaml

--- a/.github/workflows/publish-jar.yaml
+++ b/.github/workflows/publish-jar.yaml
@@ -25,7 +25,9 @@ jobs:
           distribution: temurin
 
       - name: Sett opp Gradle
-        uses: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
+
+      - run: echo "VERSION_TAG=$(TZ=Europe/Oslo date +'%y.%j.%H%M%S')" >> $GITHUB_ENV
 
       - run: ./gradlew publish --no-daemon
         env:
