parameterized java version for ql build

--- a/.github/workflows/dependency-submission.yaml
+++ b/.github/workflows/dependency-submission.yaml
@@ -2,6 +2,11 @@ name: Lag avhengighetsgraf
 
 on:
   workflow_call:
+    inputs:
+      java-version:
+        required: false
+        type: string
+        default: 21
 
 jobs:
   dependency-submission:
@@ -18,7 +23,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 21
+          java-version: ${{ inputs.java-version }}
 
       - name: Generer og lagre avhengighetsgraf
         uses: gradle/actions/dependency-submission@v4
