--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -2,6 +2,11 @@ name: Gjør CodeQL-analyse
 
 on:
   workflow_call:
+    inputs:
+      java-version:
+        required: false
+        type: string
+        default: 21
 
 jobs:
   codeql-analyze:
@@ -28,7 +33,7 @@ jobs:
       - name: Sett opp Java
         uses: actions/setup-java@v4
         with:
-          java-version: 21
+          java-version: ${{ inputs.java-version }}
           distribution: temurin
 
       - name: Sett opp Gradle
