Pass parameter java-version

--- a/.github/workflows/kodekvalitet.yaml
+++ b/.github/workflows/kodekvalitet.yaml
@@ -15,8 +15,12 @@ jobs:
       contents: read
       security-events: write
     uses: ./.github/workflows/codeql.yaml
+    with:
+      java-version: ${{ inputs.java-version }}
 
   dependency-submission:
     permissions:
       contents: write
     uses: ./.github/workflows/dependency-submission.yaml
+    with:
+      java-version: ${{ inputs.java-version }}
