--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Bygg applikasjon
-        run: ./gradlew build --no-daemon
+        run: ./gradlew clean build
 
       - name: Last opp testrapport
         if: failure()
