--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Bygg applikasjon
-        run: ./gradlew build --no-daemon
+        run: ./gradlew clean build
 
       - name: Gjør CodeQL-analyse
         uses: github/codeql-action/analyze@v2
