--- a/.github/workflows/publish-jar.yaml
+++ b/.github/workflows/publish-jar.yaml
@@ -29,6 +29,6 @@ jobs:
 
       - run: echo "VERSION_TAG=$(TZ=Europe/Oslo date +'%y.%j.%H%M%S')" >> $GITHUB_ENV
 
-      - run: ./gradlew publish --no-daemon
+      - run: ./gradlew clean publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
