--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -21,6 +21,8 @@ on:
     outputs:
       version-tag:
         value: ${{ jobs.build.outputs.version-tag }}
+      image:
+        value: ${{ jobs.build.outputs.image }}
 
 jobs:
   build:
@@ -32,6 +34,7 @@ jobs:
       id-token: write
     outputs:
       version-tag: ${{ steps.define-output.outputs.VERSION_TAG }}
+      image: ${{ steps.docker-build-push.outputs.image }}
 
     steps:
       - name: Sjekk ut koden
