--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Lag release
         uses: actions/create-release@v1
-        if: github.ref == 'refs/heads/main' || github.ref == "refs/heads/prodFix"
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/prodFix'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -102,6 +102,6 @@ jobs:
 
       - name: Definer output
         id: define-output
-        if: github.ref == 'refs/heads/main'  || github.ref == "refs/heads/prodFix"
+        if: github.ref == 'refs/heads/main'  || github.ref == 'refs/heads/prodFix'
         run: |
           echo "VERSION_TAG=${VERSION_TAG}" >> $GITHUB_OUTPUT
